# TALK2DOCS

./: README.md  pyproject.toml
talk2docs/: main.py  requirements.txt
talk2docs/faiss_index/: index.faiss  index.pkl
