[tool.poetry]
name = "talk2docs"
version = "0.1.0"
description = ""
authors = ["s2ahil <sahilpradhan411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
langchain-google-genai = "^1.0.5"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
